Enviando ex Calculadora IMC

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,10 +28,10 @@
         <p></p>
     </section>
     <section>
-        <h2><p></p></h2>
+        <h2><p th:text="${resultado}"></p></h2>
     </section>
     <section>
-        <h2><p id="erro"></p></h2>
+        <h2><p th:text="${erro}" id="erro"></p></h2>
     </section>
 </body>
 </html>
